<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".authentication.presentation.view.category.FragmentCategory">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_20"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMainCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/somar_bold"
                android:text="@string/main_category"
                android:textColor="@color/color_black_21"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edMainCategory"
                style="@style/edittext_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginHorizontal="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_10"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/select_main_category"
                android:inputType="text"
                android:paddingEnd="@dimen/dp_20"
                app:layout_constraintTop_toBottomOf="@+id/tvMainCategory"
                tools:ignore="Deprecated,KeyboardInaccessibleWidget,RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorMainCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:fontFamily="@font/somar_regular"
                android:text="@string/select_main_category"
                android:textColor="@color/Error_700"
                android:textSize="10sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/edMainCategory"
                app:layout_constraintTop_toBottomOf="@id/edMainCategory"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/somar_bold"
                android:text="@string/sub_category"
                android:textColor="@color/color_black_21"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorMainCategory"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edSubCategory"
                style="@style/edittext_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginHorizontal="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_10"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/select_sub_category"
                android:inputType="text"
                android:paddingEnd="@dimen/dp_20"
                app:layout_constraintTop_toBottomOf="@+id/tvSubCategory"
                tools:ignore="Deprecated,KeyboardInaccessibleWidget,RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorSubCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:fontFamily="@font/somar_regular"
                android:text="@string/select_sub_category"
                android:textColor="@color/Error_700"
                android:textSize="10sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/edSubCategory"
                app:layout_constraintTop_toBottomOf="@id/edSubCategory"
                tools:ignore="SmallSp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvInputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorSubCategory"
                tools:listitem="@layout/layout_input_item" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@+id/rvInputs" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_20"
        android:backgroundTint="@color/color_yellow_F9"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>